syntax = "proto3";

package user;

service UserService {
  rpc AuthenticateUser (AuthRequest) returns (AuthResponse);
  rpc AuthenticateAggregator (VendorAuthRequest) returns (VendorAuthResponse);
}

message AuthRequest {
  string token = 1;       
  string traceId = 2;       
  string spanId = 3;      
}

message AuthResponse {
  bool success = 1;        
  string message = 2;      
  CustomerData customerData = 3; 
  bool isValid = 4;       
}

message CustomerData {
  string _id = 1;           
  string fullName = 2;     
  string mobile = 3;       
}


message VendorAuthRequest {
  string token = 1;       
  string traceId = 2;      
  string spanId = 3;       
}

message VendorAuthResponse {
  bool success = 1;        
  string message = 2;      
  VendorData vendorData = 3; 
  bool isValid = 4;       
}

message VendorData {
  string _id = 1;           
  string fullName = 2;     
  string mobile = 3;       
}